examples/datalog/04_session/08_persistent_ref_session.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_pers_ref
Knowledge graph 'test_pers_ref' created.
Switched to knowledge graph: test_pers_ref
> .kg use test_pers_ref
Switched to knowledge graph: test_pers_ref
> +base[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'base'.
> temp_double(X, Y) :- base(X), Y = X * 2.
Script error: Query execution failed: Unsafe rule: Atom { relation: "temp_double", args: [Variable("X"), Variable("Y")] }. Variables ["Y"] in head do not appear in positive body atoms.
