examples/datalog/04_session/08_persistent_ref_session.dl
% Test: Persistent rule referencing session
% Expected: Clarify behavior when persistent refs session
% Category: 04_session
% Priority: P2 - Session management

.kg create test_pers_ref
.kg use test_pers_ref

+base[(1,), (2,), (3,)].

% Session rule
temp_double(X, Y) :- base(X), Y = X * 2.

% Try to reference session from persistent
% This tests the semantics
+uses_temp(X, Y) :- temp_double(X, Y).

?- uses_temp(X, Y).

.kg use default
.kg drop test_pers_ref
